Fixed menubar alignment
git-svn-id: https://svn.cs.ru.nl/repos/iTask-system/trunk@3148 63da3aa8-80fd-4f01-9db8-e6ea747a3da2

--- a/Client/itwc-theme-gray/itwc-theme.css
+++ b/Client/itwc-theme-gray/itwc-theme.css
@@ -394,6 +394,7 @@ body {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  align-self: stretch;
   margin: 0;
   padding: 2px 5px;
   background: #eeeeee;
